--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -170,3 +170,74 @@ input[type='text'],input[type='number']{
    font-weight:bold;
    cursor:pointer;
 }
+
+.heading_1{
+   text-align: center;
+   text-transform: uppercase;
+   margin-top:90px;
+   font-size:28px;
+   color:grey;
+}
+
+@media screen and (max-width:768px){
+   .heading_1{
+      font-size:18px;
+   }
+}
+
+.empty{
+   border:1px solid grey;
+   width:80%;
+   margin:auto;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.farm_product_image{
+   display:flex;
+   flex-direction: row;
+   justify-content: space-around;
+   gap:30px;
+   margin:40px;
+}
+
+.farm_product_image>div{
+   width:40%;
+}
+
+.images{
+   width:100%;
+   height:100%;
+}
+
+.vertical_farming{
+   width:50%;
+   margin:auto;
+   font-size:25px;
+   font-style: italic;
+   text-align: justify;
+   color:grey;
+   margin-bottom:40px;
+}
+
+@media screen and (max-width:768px){
+   .vertical_farming{
+      width:60%;
+      font-size:20px;
+   }
+}
+
+@media screen and (max-width:380px){
+   .vertical_farming{
+      width:75%;
+      font-size:16px;
+   }
+}
+
+.farming_example{
+   width:80%;
+   margin:auto;
+}
+
+.farming_example>img{
+   width:100%;
+}
