--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -309,3 +309,30 @@ input[type='text'],input[type='number']{
    background-color: green;
    height:35px;
 }
+
+.changeQty{
+   display:flex;
+   flex-direction:row;
+   gap:10px;
+   justify-content: space-around;
+}
+
+.changeQty>div>button{
+   height:27px;
+   border:none;
+   background-color: green;
+   color:white;
+   font-size:17px;
+   font-weight:800;
+   cursor:pointer;
+}
+
+.changeQty>div>button:nth-child(1){
+   border-top-left-radius: 5px;
+   border-bottom-left-radius: 5px;
+}
+
+.changeQty>div>button:nth-child(2){
+   border-top-right-radius: 5px;
+   border-bottom-right-radius: 5px;
+}
